--- a/index.html
+++ b/index.html
@@ -1,10 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matricola Escolar.</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <title>Estrelas do Amanhã.</title>
+    <link rel="stylesheet" href="styles/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <main>
+        <div class="main-container">
+          <div class="back">
+            <img src="assets/icones/arrow-left-02.svg" alt="" />
+            <span>voltar</span>
+          </div>
+          <h1>Formulário de matrícula</h1>
+          <p>
+            Preencha os dados abaixo para matricular seu filho na escola de
+            educação infantil Estrelas do Amanhã.
+          </p>
+          <form action="" enctype="multipart/form-data">
+            <fieldset class="child-info">
+              <legend>Informações da criança</legend>
+
+              <div class="input-wrapper">
+                <label for="fullname">Nome completo</label>
+                <input
+                  type="text"
+                  id="fullname"
+                  placeholder="Qual seu Nome da criança?"
+                />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="birth">Data Nascimento</label>
+                <input type="date" id="birth" lang="pt-br" />
+              </div>
+
+              <div class="select-wrapper">
+                <label for="gender">Sexo</label>
+                <select name="gender" id="gender">
+                  <option value="marculino">Masculino</option>
+                  <option value="feminino">Feminino</option>
+                  <option value="na">Prefiro não responder</option>
+                </select>
+              </div>
+
+              <div class="textarea-wrapper">
+                <label for="medical-info">Informações médicas</label>
+                <textarea
+                  name="medical-info"
+                  id="medical-info"
+                  cols="30"
+                  rows="10"
+                  placeholder="Alguma prescrição medica ?"
+                ></textarea>
+              </div>
+
+              <div class="droparea-wrapper">
+                <input type="file" id="birth-file" name="birth-file" />
+                <img src="assets/icones/cloud-upload.svg" alt="" />
+                <p>
+                  Clique aqui para <br />
+                  selecionar arquivos
+                </p>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </main>
+      <aside>
+        <div class="aside-container">
+          <header>
+            <img src="assets/icones/logo.svg" alt="" />
+            <h2>
+              Porque cada momento de
+              <span> aprendizado </span>conta
+            </h2>
+            <p>
+              Inscreva seu filho em nossa escola e veja-o florescer em um
+              ambiente acolhedor, seguro e estimulante.
+            </p>
+          </header>
+          <img src="assets/imagems/Illustration.svg" alt="" />
+        </div>
+      </aside>
+    </div>
+  </body>
 </html>
