--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
               <legend>Opções de matrícula</legend>
 
               <div class="input-wrapper">
-                <label
-                  >Selecione o turno de estudo</label
-                >
+                <label>Selecione o turno de estudo</label>
                 <div class="radio-wrapper">
                   <div class="radio-inner">
                     <div class="radio-image"></div>
@@ -212,43 +210,84 @@
                 <div class="radio-wrapper">
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <img src="assets/icones/football.svg" alt="">
-                    <input type="radio" name="sport" id="footboll" value="football">
+                    <img src="assets/icones/football.svg" alt="" />
+                    <input
+                      type="radio"
+                      name="sport"
+                      id="footboll"
+                      value="football"
+                    />
                     <label for="football">Futebol</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <img src="assets/icones/basketball-02.svg" alt="">
-                    <input type="radio" name="sport" id="basketbal" value="basketbal">
+                    <img src="assets/icones/basketball-02.svg" alt="" />
+                    <input
+                      type="radio"
+                      name="sport"
+                      id="basketbal"
+                      value="basketbal"
+                    />
                     <label for="basketbal">Basquete</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <img src="assets/icones/swimming.svg" alt="">
-                    <input type="radio" name="sport" id="swimming" value="swimming">
+                    <img src="assets/icones/swimming.svg" alt="" />
+                    <input
+                      type="radio"
+                      name="sport"
+                      id="swimming"
+                      value="swimming"
+                    />
                     <label for="swimming">Natação</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <img src="assets/icones/yoga-02.svg" alt="">
-                    <input type="radio" name="sport" id="yoga" value="yoga">
+                    <img src="assets/icones/yoga-02.svg" alt="" />
+                    <input type="radio" name="sport" id="yoga" value="yoga" />
                     <label for="yoga">Yoga</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <img src="assets/icones/volleyball.svg" alt="">
-                    <input type="radio" name="sport" id="volleyball" value="volleyball">
+                    <img src="assets/icones/volleyball.svg" alt="" />
+                    <input
+                      type="radio"
+                      name="sport"
+                      id="volleyball"
+                      value="volleyball"
+                    />
                     <label for="volleyball">Volei</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <img src="assets/icones/boxing-glove-01.svg" alt="">
-                    <input type="radio" name="sport" id="boxing-glove" value="boxing-glove">
+                    <img src="assets/icones/boxing-glove-01.svg" alt="" />
+                    <input
+                      type="radio"
+                      name="sport"
+                      id="boxing-glove"
+                      value="boxing-glove"
+                    />
                     <label for="boxing-glove">Box</label>
                   </div>
                 </div>
               </div>
             </fieldset>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms" />
+              <label for="terms">
+                Declaro que li e concordo com os
+                <strong> Termos e Condições</strong> e com a
+                <strong> Política de Privacidade</strong> da escola Estrela do
+                Amanhã.
+              </label>
+            </div>
+
+            <div class="button-wrapper">
+              <button class="btn-secondary" type="button">Savar Resposta</button>
+              <button class="btn-primary" type="reset">Fazer Matricola</button>
+            </div>
           </form>
         </div>
       </main>
